# OCC-GNN

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Design.md  LOG.md  Makefile  README.md  graph.py  gypsum.md  hello.cu  init.sh  model.pt  profile_v1.lprof  py_to_b.py  quiver_set_path.sh  read.cpp  requirements.txt  set_path.sh  test_dgl.py  train.py.lprof  train.py.prof
DistDGL/: single_node_multi_gpu.py
charecteristics/: clone_profile.py
cost_model/: dgl_jit.py  gcn.py  gpu_char.py  nvtx_overhead.py  quiver_feature_throughput.py  sparse_spmm.py  test_baseline_redundancy.py
cslicer/: Makefile  WorkerPool.cpp  WorkerPool.h  bipartite.cpp  bipartite.h  build.sh  dataset.cpp  dataset.h  driver.cpp  get_stats.py  main.cpp  pybipartite.cpp  pybipartite.h  pyfrontend.cpp  pyinterface.h  sample.h  setup.py  slicer.cpp  slicer.h  statistics.cpp  test_fronend.cpp  test_py.py
cuShuffle/: bandwidth_test.py  cuBandwidthTest.cu  pyfrontend.cu  setup.py
cu_slicer/: .readme.md.swp  Makefile  baseline_performance.py  bipartite_test.py  check.cu  cuslicer  layer.cu  main.cu  setup.py  test.cu  test_cuslicer_performance.py  test_py.py  thrust.cu  todo.md  traverse
cu_slicer_v2/: Makefile  README.md  gpu_char.cu  hello.cu  main.cu  setup.py  test.cpp  test.cu  torch-int.cpp  torch-int.cu  torch.cu
cu_train/: cu_shared.py  cu_train.py  cu_train_opt.py  hello.py  main.py  measure.py  run.sh  test_e2e.py
cudaSample/: block_merge.cu  sample.cu
environments/: ornl.txt
experiments/: P3.py  datasets.md  exeption_pagraph  run_everything.py  run_everything_quiver.py
(+707 files in other folders)
